--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,19 @@ migrate_working_dir/
 .pub/
 /build/
 
+# Flutter repo-specific
+ /bin/cache/
+ /bin/mingit/
+ /dev/benchmarks/mega_gallery/
+ /dev/bots/.recipe_deps
+ /dev/bots/android_tools/
+ /dev/docs/doc/
+ /dev/docs/flutter.docs.zip
+ /dev/docs/lib/
+ /dev/docs/pubspec.yaml
+ /packages/flutter/coverage/
+ version
+
 # Symbolication related
 app.*.symbols
 
@@ -41,3 +54,14 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Firebase configuration files
+lib/firebase_options.dart
+ios/Runner/GoogleService-Info.plist
+ios/firebase_app_id_file.json
+macos/Runner/GoogleService-Info.plist
+macos/firebase_app_id_file.json
+android/app/google-services.json
+
+# Firebase hosting
+.firebase/
