--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,13 @@ dependencies:
   go_router: ^13.2.1
 
   # Localization
-  intl: ^0.18.1
-
+  intl: ^0.19.0
 
   # Image picker
   image_picker: ^1.0.7
+
+  # Calendar support
+  table_calendar: ^3.1.0
 
 dev_dependencies:
   flutter_test:
